<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="phonecall.rednak71.com.thundersfarm.ContactActivity"
    android:background="@mipmap/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="40sp"
        android:text="@string/sara_etter_text"
        android:id="@+id/saratextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_sara_button"
        android:id="@+id/saraCallButton"
        android:layout_below="@+id/saratextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/call_ib" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sara_button"
        android:id="@+id/saraSmsButton"
        android:background="@drawable/text_ib"
        android:layout_below="@+id/saratextView"
        android:layout_centerHorizontal="true" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_sara_button"
        android:id="@+id/saraEmailButton"
        android:background="@drawable/email_ib"
        android:layout_below="@+id/saratextView"
        android:layout_alignLeft="@+id/judithEamilButton"
        android:layout_alignStart="@+id/judithEamilButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="40sp"
        android:text="@string/judith_text_view"
        android:id="@+id/judithtextView"
        android:layout_below="@+id/saraEmailButton"
        android:layout_centerHorizontal="true" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_judith_button"
        android:id="@+id/judithCallButtonId"
        android:layout_below="@+id/judithtextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/call_ib" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_judith"
        android:id="@+id/judithSMSButton"
        android:layout_below="@+id/judithtextView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_ib" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_judith"
        android:id="@+id/judithEamilButton"
        android:layout_below="@+id/judithtextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/email_ib" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="40sp"
        android:text="@string/neal_text_view"
        android:id="@+id/nealTextView"
        android:layout_below="@+id/judithSMSButton"
        android:layout_alignLeft="@+id/saratextView"
        android:layout_alignStart="@+id/saratextView" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_neal"
        android:id="@+id/nealCallButton"
        android:layout_below="@+id/nealTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/call_ib" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neal_text"
        android:id="@+id/nealSmsButton"
        android:layout_below="@+id/nealTextView"
        android:layout_alignLeft="@+id/judithSMSButton"
        android:layout_alignStart="@+id/judithSMSButton"
        android:background="@drawable/text_ib" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neal_email"
        android:id="@+id/nealEmailButton"
        android:layout_below="@+id/nealTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/email_ib" />

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/homeButton"
        android:background="@mipmap/thunders400pxl_logo"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_text_view"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
